# debugGlass

./: BUILD.bazel  MODULE.bazel  README.md
debugglass/: debugglass.cpp  debugglass.h  subwindow_registry.cpp  subwindow_registry.h
debugglass/widgets/: graph.cpp  graph.h  message_monitor.cpp  message_monitor.h  structure.cpp  structure.h  tab.cpp  tab.h  variable.cpp  variable.h  window_content.h
devtools/: BUILD.bazel
examples/: BUILD.bazel
examples/background_demo/: main.cpp
examples/hello_debugglass/: main.cpp
examples/subwindow_demo/: main.cpp
test/: BUILD.bazel  window.cpp
