config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

cc_binary(
    name = "hello_imgui",
    srcs = ["hello_imgui/main.cpp"],
    deps = [
        "//:imgui_monitor",
    ],
    linkopts = select({
        ":linux": ["/usr/lib/x86_64-linux-gnu/libGL.so.1"],
        "//conditions:default": [],
    }),
)
